--- a/src/main/resources/Schedule/material_login.fxml
+++ b/src/main/resources/Schedule/material_login.fxml
@@ -1,22 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXPasswordField?>
 <?import com.jfoenix.controls.JFXTextField?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.Cursor?>
-<?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.*?>
-<BorderPane xmlns:fx="http://javafx.com/fxml/1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
-            minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #FFFFFF;"
-            xmlns="http://javafx.com/javafx/8.0.65" fx:controller="WHS_planner.Schedule.loginController">
-    <center>
+<VBox xmlns:fx="http://javafx.com/fxml/1" alignment="CENTER" style="-fx-background-color: #FFFFFF;"
+      xmlns="http://javafx.com/javafx/8.0.65" fx:controller="WHS_planner.Schedule.loginController">
+    <children>
         <Pane fx:id="loginPane" maxHeight="360.0" maxWidth="360.0" minHeight="360.0" minWidth="360.0" prefHeight="360.0"
               prefWidth="360.0"
-              style="-fx-background-color: #F7F7F7; -fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.25), 15, 0, 1, 2, 0);"
-              BorderPane.alignment="CENTER">
+              style="-fx-background-color: #F7F7F7; -fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.25), 15, 0, 1, 2, 0);">
             <children>
                 <Label layoutX="85.0" layoutY="40.0" text="Login to iPass">
                     <font>
@@ -58,5 +56,5 @@
                 </VBox>
             </children>
         </Pane>
-    </center>
-</BorderPane>
+    </children>
+</VBox>
