--- a/src/main/resources/Schedule/wank_layout.fxml
+++ b/src/main/resources/Schedule/wank_layout.fxml
@@ -1,16 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXSpinner?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
-<BorderPane xmlns:fx="http://javafx.com/fxml/1" minHeight="-Infinity" minWidth="-Infinity" prefHeight="474.0"
-            prefWidth="573.0" xmlns="http://javafx.com/javafx/8.0.65"
-            fx:controller="WHS_planner.Schedule.ScheduleController">
-   <center>
-      <GridPane fx:id="grid" style="-fx-border-color: White; -fx-grid-lines-visible: False;" BorderPane.alignment="CENTER">
+<VBox xmlns:fx="http://javafx.com/fxml/1" alignment="CENTER" xmlns="http://javafx.com/javafx/8.0.65"
+      fx:controller="WHS_planner.Schedule.ScheduleController">
+   <children>
+      <Label fx:id="Title3" alignment="CENTER" prefHeight="17.0" prefWidth="405.0" text="Label" textAlignment="CENTER"
+             VBox.vgrow="NEVER">
+         <font>
+            <Font name="Plantagenet Cherokee" size="24.0"/>
+         </font>
+      </Label>
+      <JFXSpinner fx:id="spinner" prefHeight="20.0" prefWidth="20.0" radius="6.0" VBox.vgrow="NEVER"/>
+      <GridPane fx:id="grid" style="-fx-border-color: White; -fx-grid-lines-visible: False;" VBox.vgrow="ALWAYS">
          <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -540,12 +547,7 @@
             </Label>
          </children>
       </GridPane>
-   </center>
-   <right>
-      <Pane prefHeight="388.0" prefWidth="102.0" BorderPane.alignment="CENTER" />
-   </right>
-    <bottom>
-       <HBox alignment="CENTER_RIGHT" prefHeight="30.0" BorderPane.alignment="CENTER">
+      <HBox alignment="CENTER_RIGHT" prefHeight="30.0" VBox.vgrow="NEVER">
           <children>
              <JFXButton fx:id="reset" onAction="#updateSchedule" text="Reset Schedule">
                 <font>
@@ -559,21 +561,5 @@
                 </JFXButton>
           </children>
        </HBox>
-   </bottom>
-   <left>
-      <Pane prefHeight="338.0" prefWidth="102.0" BorderPane.alignment="CENTER"/>
-   </left>
-   <top>
-      <VBox alignment="CENTER" prefHeight="60.0" prefWidth="100.0" BorderPane.alignment="CENTER">
-         <children>
-            <Label fx:id="Title3" alignment="CENTER" prefHeight="17.0" prefWidth="405.0" text="Label"
-                   textAlignment="CENTER">
-               <font>
-                  <Font name="Plantagenet Cherokee" size="24.0" />
-               </font>
-            </Label>
-            <JFXSpinner fx:id="spinner" radius="6.0"/>
-         </children>
-      </VBox>
-   </top>
-</BorderPane>
+   </children>
+</VBox>
