Time left in block tooltip

--- a/src/main/resources/Calendar/topRow.css
+++ b/src/main/resources/Calendar/topRow.css
@@ -9,6 +9,8 @@
 */
      -fx-background-color: #BDBDBD;
      -fx-text-fill: #FFFFFF;
+     -fx-font-weight: bold;
+     -fx-font-family: "Roboto Mono"
 }
 
 .label {
