--- a/src/main/resources/UI/NavBar.fxml
+++ b/src/main/resources/UI/NavBar.fxml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXHamburger?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane fx:id="navBar" maxHeight="48.0" minHeight="48.0" minWidth="100.0" prefHeight="48.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane fx:id="navBar" maxHeight="48.0" minHeight="48.0" minWidth="100.0" prefHeight="48.0" xmlns="http://javafx.com/javafx/8.0.76-ea" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <JFXHamburger alignment="CENTER" layoutX="14.0" layoutY="14.0" AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="14.0" />
+      <JFXButton alignment="CENTER" mnemonicParsing="false" text=":" layoutY="14.0" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="0.0" />
    </children>
 </AnchorPane>
