--- a/src/main/resources/Schedule/wank_layout.fxml
+++ b/src/main/resources/Schedule/wank_layout.fxml
@@ -561,4 +561,7 @@
           </children>
        </HBox>
    </children>
+   <padding>
+      <Insets left="10.0" right="10.0"/>
+   </padding>
 </VBox>
