--- a/src/main/resources/UI/NavBar.fxml
+++ b/src/main/resources/UI/NavBar.fxml
@@ -7,6 +7,6 @@
 <AnchorPane fx:id="navBar" maxHeight="48.0" minHeight="48.0" minWidth="100.0" prefHeight="48.0" xmlns="http://javafx.com/javafx/8.0.76-ea" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <JFXHamburger alignment="CENTER" layoutX="14.0" layoutY="14.0" AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="14.0" />
-      <JFXButton alignment="CENTER" mnemonicParsing="false" text=":" layoutY="14.0" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="0.0" />
+      <JFXButton alignment="CENTER" mnemonicParsing="false" text=" " layoutY="14.0" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="0.0"/>
    </children>
 </AnchorPane>
