--- a/src/main/resources/Schedule/wank_layout.fxml
+++ b/src/main/resources/Schedule/wank_layout.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXSpinner?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
@@ -9,13 +8,16 @@
 <VBox xmlns:fx="http://javafx.com/fxml/1" alignment="CENTER" xmlns="http://javafx.com/javafx/8.0.65"
       fx:controller="WHS_planner.Schedule.ScheduleController">
    <children>
-      <Label fx:id="Title3" alignment="CENTER" prefHeight="17.0" prefWidth="405.0" text="Label" textAlignment="CENTER"
-             VBox.vgrow="NEVER">
-         <font>
-            <Font name="Plantagenet Cherokee" size="24.0"/>
-         </font>
-      </Label>
-      <JFXSpinner fx:id="spinner" prefHeight="20.0" prefWidth="20.0" radius="6.0" VBox.vgrow="NEVER"/>
+      <StackPane prefHeight="20.0" VBox.vgrow="NEVER">
+         <children>
+            <Label fx:id="Title3" alignment="CENTER" prefHeight="18.0" prefWidth="405.0" textAlignment="CENTER">
+               <font>
+                  <Font name="Plantagenet Cherokee" size="24.0"/>
+               </font>
+            </Label>
+            <JFXSpinner fx:id="spinner" prefHeight="20.0" prefWidth="20.0" radius="6.0"/>
+         </children>
+      </StackPane>
       <GridPane fx:id="grid" style="-fx-border-color: White; -fx-grid-lines-visible: False;" VBox.vgrow="ALWAYS">
          <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -546,22 +548,8 @@
             </Label>
          </children>
       </GridPane>
-      <HBox alignment="CENTER_RIGHT" prefHeight="30.0" VBox.vgrow="NEVER">
-          <children>
-             <JFXButton fx:id="reset" onAction="#updateSchedule" text="Reset Schedule">
-                <font>
-                   <Font name="Roboto" size="13.0"/>
-                </font>
-             </JFXButton>
-             <JFXButton fx:id="logout" buttonType="RAISED" onAction="#logout" text="Logout">
-                    <font>
-                       <Font name="Roboto" size="13.0"/>
-                    </font>
-                </JFXButton>
-          </children>
-       </HBox>
    </children>
    <padding>
-      <Insets left="10.0" right="10.0"/>
+      <Insets bottom="10.0" left="10.0" right="10.0"/>
    </padding>
 </VBox>
