News Image now fills entire card width!

--- a/src/main/resources/News/NewsUI.css
+++ b/src/main/resources/News/NewsUI.css
@@ -53,5 +53,10 @@
 {
     -fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.25), 15, 0, 1, 2, 0);
     -fx-background-color: white;
+    /*-fx-padding: 10;*/
+}
+
+.text-padding
+{
     -fx-padding: 10;
 }
