One last commit before I fuck everything up

--- a/src/main/resources/UI/dropDown.css
+++ b/src/main/resources/UI/dropDown.css
@@ -5,14 +5,13 @@
     -fx-pref-height: 50;
     -fx-padding: 0;
     -fx-background-radius: 0;
-
-    /*text wrap*/
 }
 
 .label-button {
     -fx-font-size: 14px;
     -fx-font-family: "Roboto";
 
-    -fx-padding: 0;
+    /*-fx-label-padding: 0em, 0em, 0em, .416667em;*/
+    -fx-label-padding: 0 0 0 5;
 
 }
