--- a/src/main/resources/Calendar/taskBox.fxml
+++ b/src/main/resources/Calendar/taskBox.fxml
@@ -13,11 +13,13 @@
             <JFXCheckBox fx:id="override" prefHeight="31.0" prefWidth="155.0" text="Use Current Class" HBox.hgrow="NEVER">
                <font>
                   <Font name="Roboto" size="13.0" />
-               </font></JFXCheckBox>
+               </font>
+            </JFXCheckBox>
             <JFXTextField fx:id="textBox" promptText="Enter Task...">
                <font>
                   <Font name="Roboto" size="13.0" />
-               </font></JFXTextField>
+               </font>
+            </JFXTextField>
          </children>
       </HBox>
    </children>
