--- a/src/main/resources/Schedule/wank_layout.fxml
+++ b/src/main/resources/Schedule/wank_layout.fxml
@@ -1,21 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXSpinner?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
-<VBox xmlns:fx="http://javafx.com/fxml/1" alignment="CENTER" xmlns="http://javafx.com/javafx/8.0.65"
-      fx:controller="WHS_planner.Schedule.ScheduleController">
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
+
+<VBox alignment="CENTER" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="WHS_planner.Schedule.ScheduleController">
    <children>
       <StackPane prefHeight="20.0" VBox.vgrow="NEVER">
          <children>
-            <Label fx:id="Title3" alignment="CENTER" prefHeight="18.0" prefWidth="405.0" textAlignment="CENTER">
+            <Label fx:id="Title3" alignment="CENTER" prefHeight="31.0" prefWidth="500.0" textAlignment="CENTER">
                <font>
-                  <Font name="Plantagenet Cherokee" size="24.0"/>
+                  <Font name="Plantagenet Cherokee" size="24.0" />
                </font>
             </Label>
-            <JFXSpinner fx:id="spinner" prefHeight="20.0" prefWidth="20.0" radius="6.0"/>
+            <JFXSpinner fx:id="spinner" prefHeight="20.0" prefWidth="20.0" radius="6.0" />
          </children>
       </StackPane>
       <GridPane fx:id="grid" style="-fx-border-color: White; -fx-grid-lines-visible: False;" VBox.vgrow="ALWAYS">
@@ -550,6 +555,6 @@
       </GridPane>
    </children>
    <padding>
-      <Insets bottom="10.0" left="10.0" right="10.0"/>
+      <Insets bottom="10.0" left="10.0" right="10.0" />
    </padding>
 </VBox>
