- optimised imports - login button disabled when logging in - file creation redundancy added

--- a/src/main/resources/Calendar/calendarBoxV2.fxml
+++ b/src/main/resources/Calendar/calendarBoxV2.fxml
@@ -3,12 +3,8 @@
 <?import com.jfoenix.controls.JFXButton?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.StackPane?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.*?>
 <?import javafx.scene.shape.Circle?>
-
 <StackPane fx:id="stackPane" minHeight="80.0" minWidth="110.0" xmlns="http://javafx.com/javafx/8.0.76-ea" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <JFXButton fx:id="button" styleClass="box-button" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
