--- a/src/main/resources/CoreUI/SportsPopup.fxml
+++ b/src/main/resources/CoreUI/SportsPopup.fxml
@@ -2,10 +2,8 @@
 
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXListView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
-
 <AnchorPane fx:id="sportsPopupAnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="330.0" prefWidth="284.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="WHS_planner.CoreUI.popupController">
    <children>
       <JFXButton fx:id="addListButton" graphicTextGap="0.0" layoutX="545.0" onMouseClicked="#plusButtonPressed" prefHeight="61.0" prefWidth="74.0" ripplerFill="#ff1212" text="+" textAlignment="CENTER" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
