--- a/src/main/resources/Schedule/schedule_layout.fxml
+++ b/src/main/resources/Schedule/schedule_layout.fxml
@@ -5,11 +5,12 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
-<VBox alignment="CENTER" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="WHS_planner.Schedule.ScheduleController">
+<VBox xmlns:fx="http://javafx.com/fxml/1" alignment="CENTER" xmlns="http://javafx.com/javafx/8.0.65"
+      fx:controller="WHS_planner.Schedule.ScheduleController">
    <children>
       <StackPane prefHeight="20.0" VBox.vgrow="NEVER">
          <children>
-            <Label fx:id="Title3" alignment="CENTER" prefHeight="31.0" prefWidth="500.0" textAlignment="CENTER">
+            <Label fx:id="Title3" alignment="CENTER" prefHeight="31.0" prefWidth="900.0" textAlignment="CENTER">
                <font>
                   <Font name="Roboto" size="24.0" />
                </font>
