--- a/src/main/resources/UI/dropDown.css
+++ b/src/main/resources/UI/dropDown.css
@@ -8,9 +8,9 @@
     -fx-cursor: hand;
 
     -fx-font-family: 'FontAwesome Regular';
-
-
 }
+
+
 
 .label-button {
     -fx-font-size: 14px;
@@ -34,12 +34,10 @@
 
 .gray-button {
     -fx-background-color: #BDBDBD;
-    -fx-font-size: 18px;
+    -fx-font-size: 14px;
     -fx-font-family: "Roboto";
     -fx-padding: 5;
-    -fx-background-radius: 5;
-
-
+    -fx-background-radius: 3;
 }
 
 .times {
@@ -57,5 +55,11 @@
     -fx-font-size: 20px;
     -fx-font-weight: bold;
 
+}
+
+.big-button{
+    -fx-font-family: 'FontAwesome Regular';
+    -fx-font-size: 28px;
+    -fx-text-fill: #FFFFFF;
 }
 
