--- a/src/main/resources/News/NewsUI.css
+++ b/src/main/resources/News/NewsUI.css
@@ -60,3 +60,12 @@
 {
     -fx-padding: 10;
 }
+
+.refresh-button{
+    /*-fx-padding: 0.7em 0.57em;*/
+    -fx-font-size: 14px;
+    -fx-button-type: RAISED;
+    -fx-background-color: rgb(77,102,204);
+    -fx-pref-width: 230;
+    -fx-text-fill: WHITE;
+}
