--- a/src/main/resources/UI/comboBox.css
+++ b/src/main/resources/UI/comboBox.css
@@ -1,24 +1,34 @@
-.combo-box-popup .list-view .jfx-list-cell:selected {
+.combo-box-popup .list-view .jfx-list-cell:filled:selected {
 	/*-fx-background-color: rgba(238,238,238,1);*/
 	-fx-background-color: rgb(255,255,255);
 	-fx-text-fill: black;
 }
 
-.combo-box-popup .list-view .jfx-list-cell {
-	-fx-background-insets: 0.0 ;
+.combo-box-popup .list-view .jfx-list-cell{
+	-fx-background-insets: 24 ;
 	-fx-text-fill: black;
 }
 
-.combo-box-popup .list-view .jfx-list-cell:hover {
+.combo-box-popup .list-view .jfx-list-cell:hover/*, .jfx-list-cell:filled:hover */ {
 	-fx-text-fill: black;
-	-fx-background-color: rgba(238,238,238,1);
+	-fx-background-color: rgb(238,238,238);
 }
 
 .combo-box-popup .list-view .jfx-list-cell .jfx-rippler {
-	-fx-rippler-fill: rgba(204,204,204,1);
+	-fx-rippler-fill: rgb(204,204,204);
 }
 
 .combo-box-popup .list-view {
     -fx-text-fill: black;
-    -fx-translate-y: -50;
+    -fx-translate-y: -25;
+    -fx-font-size: 14px;
+    -fx-font-family: "Roboto";
+    -fx-border-color: white;
+    /*-fx-border-width: 1;*/ /*Border Width is already 1 by default */
 }
+
+/*.combo-box-popup {
+    -fx-background-color: rgba(204,204,204,1);
+    -fx-background-radius: 5;
+    -fx-border-radius: 5;
+}*/
