--- a/src/main/resources/UI/comboBox.css
+++ b/src/main/resources/UI/comboBox.css
@@ -9,7 +9,7 @@
 	-fx-text-fill: black;
 }
 
-.combo-box-popup .list-view .jfx-list-cell:hover/*, .jfx-list-cell:filled:hover */ {
+.combo-box-popup > .list-view .jfx-list-cell:hover/*, .jfx-list-cell:filled:hover */ {
 	-fx-text-fill: black;
 	-fx-background-color: rgb(238,238,238);
 }
@@ -36,5 +36,6 @@
       -fx-border-radius: 5,5;
       /*-fx-border-width: 2;*/
 }
+
 
 
