--- a/src/main/resources/News/NewsUI.css
+++ b/src/main/resources/News/NewsUI.css
@@ -1,7 +1,8 @@
 /* The main scrollbar **track** CSS class  */
 .scroll-bar:horizontal .track,
 .scroll-bar:vertical .track{
-	-fx-background-color:transparent;
+	/*-fx-background-color:transparent;*/
+	-fx-background-color: white;
 	-fx-border-color:transparent;
 	-fx-background-radius: 0em;
 	-fx-border-radius:2em;
