--- a/src/main/resources/UI/Main.css
+++ b/src/main/resources/UI/Main.css
@@ -30,3 +30,15 @@
     -fx-background-color: #0066FF;
     -fx-background-radius: 0;
 }
+
+.jfx-snackbar-content {
+    -fx-background-color: #323232;
+}
+
+.jfx-snackbar-toast {
+    -fx-text-fill: WHITE;
+}
+
+.jfx-snackbar-action {
+    -fx-text-fill: #ff4081;
+}
