--- a/src/main/resources/Calendar/MainUI.css
+++ b/src/main/resources/Calendar/MainUI.css
@@ -3,6 +3,12 @@
     -fx-padding:2;
 }
 
+.letter-date-label {
+    -fx-font-size: 18px;
+    -fx-padding:2;
+    -fx-font-weight: bold;
+}
+
 .icon {
      -fx-font-family: 'FontAwesome Regular';
      -fx-font-size: 36px;
