--- a/src/main/resources/Calendar/MainUI.css
+++ b/src/main/resources/Calendar/MainUI.css
@@ -6,7 +6,9 @@
 .letter-date-label {
     -fx-font-size: 18px;
     -fx-padding:2;
-    -fx-font-weight: bold;
+    /*-fx-font-weight: bold;*/
+         -fx-font-family: 'Roboto';
+
 }
 
 .icon {
